WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109020
input element with placeholder text and width set to 100% on focus causes overflow even after losing focus
https://bugs.webkit.org/show_bug.cgi?id=109020
Summary
input element with placeholder text and width set to 100% on focus causes ove...
Masataka Yakura
Reported
2013-02-06 00:15:10 PST
Created
attachment 186775
[details]
test case Steps to reproduce: 1. open the attachment 2. hit Tab key to focus the input element 3. hit Tab again to move focus out from the input element Expected results: there is no horizontal scrollbar. What happened instead: there is a horizontal scrollbar. This neither happens on input elements with no placeholder text (or blank placeholder text) nor textarea elements with or without placeholder text.
Attachments
test case
(128 bytes, text/html)
2013-02-06 00:15 PST
,
Masataka Yakura
no flags
Details
Patch
(6.54 KB, patch)
2013-02-16 02:56 PST
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Patch
(5.92 KB, patch)
2013-02-18 12:04 PST
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Patch
(6.51 KB, patch)
2013-02-18 12:47 PST
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2013-02-16 02:56:35 PST
Created
attachment 188703
[details]
Patch
Darin Adler
Comment 2
2013-02-16 13:29:12 PST
Comment on
attachment 188703
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=188703&action=review
> Source/WebCore/rendering/RenderBlock.cpp:1698 > + if (block->node() && block->node()->toInputElement() && block->node()->toInputElement()->placeholderElement() && block->node()->toInputElement()->placeholderElement()->renderer() == child) > + return false;
There has to be some better way of doing this than hard-coding the placeholder. Is a placeholder element really the only place in all of WebKit that we have block child that does not affect layout or size of the parent? Is there a better way to set up the render tree so we don’t need this very-specific hack?
Robert Hogan
Comment 3
2013-02-18 12:04:28 PST
Created
attachment 188928
[details]
Patch
Dave Hyatt
Comment 4
2013-02-18 12:15:00 PST
Comment on
attachment 188928
[details]
Patch This seems ok. Other approaches you could take would be to simply recompute overflow if the placeholder box does a relayout. This would be better if the placeholder needs to contribute to overflow and doing this causes it to be wrong. It seems like a bug that the placeholder is getting resized but nobody recomputes overflow?
Robert Hogan
Comment 5
2013-02-18 12:47:55 PST
Created
attachment 188931
[details]
Patch
Dave Hyatt
Comment 6
2013-02-18 12:50:46 PST
Comment on
attachment 188931
[details]
Patch r=me
WebKit Review Bot
Comment 7
2013-02-19 14:28:06 PST
Comment on
attachment 188931
[details]
Patch Rejecting
attachment 188931
[details]
from commit-queue. New failing tests: platform/chromium/fast/forms/calendar-picker/calendar-picker-appearance-required.html Full output:
http://queues.webkit.org/results/16621955
WebKit Review Bot
Comment 8
2013-02-20 10:28:46 PST
Comment on
attachment 188931
[details]
Patch Clearing flags on attachment: 188931 Committed
r143475
: <
http://trac.webkit.org/changeset/143475
>
WebKit Review Bot
Comment 9
2013-02-20 10:28:49 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug